# binary_set

./: .clang-format  .gitignore  BENCHMARKS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  EXAMPLES.md  LICENSE  README.md  binary_set.hxx  check.cc##8be0d6bc19107241e75d6f04d14e03ed.gcov
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  main_benchmark.cpp
examples/: CMakeLists.txt  basic_usage.cpp  iteration.cpp  set_operations.cpp  subset_search.cpp
tests/: CMakeLists.txt  binary_set_test.cpp  bs_searcher_test.cpp
